--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,14 @@ on:
 jobs:
   build-and-test:
     strategy:
+      fail-fast: false
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
+        test: ["npm test", "bunx vitest"]
+        exclude:
+          # bun doesnt have good windows support yet lol
+          - os: windows-latest
+            test: "bunx vitest"
     runs-on: ${{ matrix.os }}
     permissions:
       contents: write
@@ -40,4 +46,4 @@ jobs:
         run: npm run check
 
       - name: Test
-        run: npm test
+        run: ${{ matrix.test }} 
